--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,6 @@
 
 header .navbar {
-  padding: 30px 0;
+  padding: 15px 0 30px 0;
   transition: all .5s ease-out;
 }
 
@@ -11,18 +11,19 @@ header .navbar-default {
 
 header .navbar-default .navbar-nav a {
   color: white;
+  font-weight: 300;
   padding: 5px 8px;
 }
 
 header .navbar-default .navbar-nav a:hover {
-  color: #EEC856;
+  color: #00c78c;
 }
 
 header .navbar-default .navbar-nav .active a {
   font-weight: 700;
-  color: #EEC856;
+  color: #00c78c;
   background: transparent;
-  border-bottom: 4px solid #EEC856;
+  
   text-shadow: none;
 }
 
@@ -104,3 +105,47 @@ header .inbody .navbar-brand h1 {
 header .inbody .navbar-brand span.subhead {
   display: none;
 }
+
+/*carousel fade*/
+
+.carousel.fade {
+  opacity: 1;
+}
+
+.carousel.fade .item {
+  transition: opacity ease-out .7s;
+  left: 0;
+  opacity: 0;
+  top: 0;
+  position: absolute;
+  width: 100%;
+  display: block;
+}
+
+.carousel.fade .item:first-child {
+  top: auto;
+  opacity: 0;
+  position: relative;
+}
+
+.carousel.fade .item.active {
+  opacity: 1;
+}
+
+.carousel-control {
+  opacity: 0;
+}
+
+.carousel-control.right,
+.carousel-control.left {
+  background-image: none;
+}
+
+#featured .item {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+}
+
