--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,26 +1,55 @@
 <header>
-  <div class="container-fluid">
-   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse">
+
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#featured"><h1>Wisdom <span class="subhead">Pet Medicine</span></h1></a>
-      </div><!-- navbar-header -->
-      <div class="collapse navbar-collapse" id="collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#featured">Home</a></li>
-          <li><a href="#mission">Mission</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#staff">Staff</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-        </ul>        
-      </div><!-- collapse navbar-collapse -->
-    </div><!-- container -->
-  </nav>
-  </div> <!-- main-conttainer -->
+          <a class="navbar-brand" href="#featured">
+            <h1>Wisdom <span class="subhead">Pet Medicine</span></h1>
+          </a>
+        </div>
+        <!-- navbar-header -->
+        <div class="collapse navbar-collapse" id="collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#featured">Home</a></li>
+            <li><a href="#mission">Mission</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#staff">Staff</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+          </ul>
+        </div>
+        <!-- collapse navbar-collapse -->
+      </div>
+      <!-- container -->
+    </nav>
+
+    <div class="carousel fade" data-ride="carousel" id="featured">
+
+      <ol class="carousel-indicators">
+      </ol>
+
+      <div class="carousel-inner fullheight">
+        <div class="item"><img src="../../assets/bg1.jpg" alt="Lifstyle Photo"></div>
+         <div class="item"><img src="../../assets/bg2.jpg" alt="Mission"></div>
+        <div class="item"><img src="../../assets/bg3.jpg" alt="Vaccinations"></div>
+        <div class="item"><img src="../../assets/bg4.jpg" alt="Fish"></div>
+        <div class="item"><img src="../../assets/bg5.jpg" alt="Exotic Animals"></div> 
+      </div>
+      <!-- carousel-inner -->
+
+      <a class="left carousel-control" href="#featured" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+      <a class="right carousel-control" href="#featured" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
+    </div>
+    <!-- featured carousel -->
+ 
+  <!-- main-conttainer -->
 </header>
